SERVER-88650 Fix deadlock in `VectorClockMongoD` during shutdown (#20495)

GitOrigin-RevId: ac80502a062485b37a8809a903618984564dccfd